# devcontainer_env

./: README.md  pyproject.toml
.devcontainer/: Dockerfile_python  devcontainer.json
